fix: Expand cards to fill container on small screens

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -129,8 +129,8 @@
 }
 
 .modal__image {
-  width: 100%;
   border-radius: 8px;
+  width: 100%;
   object-fit: contain;
   max-width: 80vw;
   max-height: 80vh;
@@ -147,11 +147,18 @@
 
 @media screen and (max-width: 764px) {
   .modal {
-    padding: 10px;
+    padding: 16px;
   }
 
   .modal__container {
     padding: 12px;
+  }
+
+  .modal__container_type_preview {
+    padding: 0;
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
   }
 
   .modal__title {
@@ -166,7 +173,7 @@
   }
 
   .modal__close-btn_type_preview {
-    top: -28px;
+    top: -48px;
     right: 0;
   }
 
@@ -182,5 +189,11 @@
 
   .modal__submit-btn {
     width: 100%;
+  }
+
+  .modal__image {
+    width: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
   }
 }
